@@ -1,3 +1,8 @@
+2008-11-14  Curtis Gedak  <gedakc@gmail.com>
+
+	* src/Win_GParted.cc: Moved menu entry
+	- "Gparted->Show Features" moved to "View->File System Support".
+
 2008-11-13  Curtis Gedak  <gedakc@gmail.com>
 
 	* include/FS_Info.h,
